--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,104 +1,220 @@
-*{
+* {
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
 	font-family: "Poppins", sans-serif;
+	color: #ffffff;
 }
 
-:root{
+body {
+	background-color: #101010;
+  }
+  
+  :root {
 	--dark: #101010;
 	--dark-grey: #1c1c1c;
 	--light-grey: #848484;
-	--accent: #24987E;
-}
-
-nav{
+	--accent: #24987e;
+  }
+  
+  nav {
 	position: fixed;
 	width: 100%;
-}
-
-.navbarContainer{
+  }
+  
+  .navbarContainer {
 	display: flex;
 	justify-content: space-between;
 	width: 50%;
 	margin: 0 auto;
 	align-items: center;
 	padding: 15px 0;
-}
-
-.navbarBtn{
+  }
+  
+  .navbarBtn {
 	background-color: transparent;
 	border: none;
 	padding-bottom: 7px;
 	font-size: 18px;
-}
-
-.navbarBtn:hover{
+  }
+  
+  .navbarBtn:hover {
 	transform: scale(1.2);
 	transition: 0.25s;
 	font-weight: 500;
 	cursor: pointer;
-}
-
-.landingContainer{
+  }
+  
+  .landingContainer {
 	height: 100vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-}
-
-.landingContent{
+  }
+  
+  .landingContent {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-}
-
-.landingContent p{
+  }
+  
+  .landingContent p {
 	font-size: 20px;
-}
-
-.name{
+  }
+  
+  .name {
 	font-size: 75px;
-	color: var(--dark);
+  }
+  
+  .aboutMe-container {
+	display: flex;
+	padding: 7%;
+	justify-content: center;
+	align-items: center;
+  }
+  
+  .image {
+	width: 40%;
+  }
+  
+  .aboutMe-heading {
+	font-size: 38px;
+	margin-bottom: 30px;
+  }
+  
+  .text {
+	margin-left: 10%;
+  }
+  
+  .aboutMe-content {
+	font-size: 18px;
+  }
+  
+  .servicesContainer {
+	padding: 0 5% 5%;
+  }
+  .sectionHeading {
+	font-size: 38px;
+	text-transform: uppercase;
+	border-bottom: 7px solid var(--accent);
+	padding-bottom: 15px;
+	text-align: center;
+	margin: 0 auto;
+	width: fit-content;
+  }
+  
+  .servicesCardContainer {
+	display: flex;
+	justify-content: space-between;
+	padding: 5% 2%;
+  }
+  
+  .servicesCard {
+	max-width: 375px;
+	margin: 0 15px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	padding: 15px;
+	border-radius: 15px;
+	background-color: var(--dark-grey);
+  }
+  .cardImg {
+	height: 125px;
+	width: 125px;
+	margin-bottom: 50px;
+  }
+  .cardTitle {
+	font-size: 20px;
+	font-weight: 500;
+	margin-bottom: 25px;
+  }
+  
+  .cardContent {
+	font-size: 16px;
+	text-align: center;
+	margin-bottom: 20px;
+  }
+  
+  /* MEDIA QUERIES */
+  
+  /* 1150px */
+  @media only screen and (max-width: 1150px) {
+	.myImage {
+	  height: 350px;
+	  width: 350px;
+	}
+	.aboutMe-heading {
+	  font-size: 30px;
+	}
+  }
+  
+  /* 1050px */
+  @media only screen and (max-width: 1150px) {
+	.servicesCardContainer {
+	  flex-direction: column;
+	  justify-content: center;
+	  align-items: center;
+	}
+	.servicesCard {
+	margin-top: 15px;
+	}
 }
 
-
-/* MEDIA QUERIES */
-
-/* 900px */
+  /* 900px */
 @media only screen and (max-width: 900px) {
-	.navbarContainer{
-		width: 75%;
+	.navbarContainer {
+	width: 75%;
 	}
-	.name{
-		font-size: 50px;
+	.name {
+	font-size: 50px;
 	}
-	.landingContent p{
-		font-size: 18px;
+	.landingContent p {
+	font-size: 18px;
+	}
+	.aboutMe-container {
+	flex-direction: column;
+	}
+	.text {
+	margin-left: 0;
+	}
+	.image {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 75px;
+	}
+	.aboutMe-heading,
+	.aboutMe-content {
+	text-align: center;
 	}
 }
 
-/* 600px */
+  /* 600px */
 @media only screen and (max-width: 600px) {
-	.navbarContainer{
-		width: 100%;
+	.navbarContainer {
+	width: 100%;
 	}
-	.name{
-		font-size: 35px;
+	.name,
+	.aboutMe-heading {
+	font-size: 35px;
 	}
 }
 
-/* 450px */
+  /* 450px */
 @media only screen and (max-width: 600px) {
-	nav{
-		display: none;
+	nav {
+	display: none;
 	}
-	.name{
-		font-size: 25px;
+	.name,
+	.aboutMe-heading {
+	font-size: 25px;
 	}
-	.landingContent p{
-		font-size: 14px;
+	.landingContent p {
+	font-size: 14px;
 	}
 }
+
