--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -121,7 +121,7 @@ nav {
   font-size: 16px;
   padding: 10px 20px;
   margin-top: 50px;
-  border-radius: 7px;
+  border-radius: 5px;
   border: none;
   outline: none;
 }
@@ -174,7 +174,7 @@ nav {
 
 .cardContent {
   font-size: 16px;
-  text-align: justify;
+  text-align: center;
   margin-bottom: 20px;
   font-weight: 200;
 }
@@ -188,7 +188,8 @@ nav {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 7% 7% 2%;
+  padding: 5% 7% 2%;
+  margin-top: 25px;
 }
 
 .projectsCardContainer-bottom {
@@ -226,9 +227,13 @@ nav {
 }
 
 .skillsIconsContainer {
-  display: flex;
-  justify-content: space-between;
   padding: 7%;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  gap: 30px;
+  grid-template-columns: repeat(9, 1fr);
+  grid-template-rows: repeat(1, 1fr);
 }
 
 .skillsIcon {
@@ -247,7 +252,7 @@ nav {
   border-radius: 20px;
   padding-bottom: 25px;
   width: 45%;
-  margin-right: 10px;
+  margin-right: 20px;
 }
 
 .workExperienceCard {
@@ -284,7 +289,7 @@ nav {
 
 .footerText {
   font-size: 25px;
-  font-weight: 300;
+  font-weight: 200;
   text-align: center;
   margin: 40px auto;
   padding: 0 20px;
@@ -300,6 +305,11 @@ nav {
   height: 50px;
   width: 50px;
   margin: auto 15px;
+}
+
+.footerIcon:hover {
+  transform: scale(1.15);
+  cursor: pointer;
 }
 
 .designedAndDeveloped {
@@ -324,6 +334,11 @@ nav {
   .aboutMe-heading {
     font-size: 30px;
   }
+  .skillsIconsContainer {
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    align-items: center;
+  }
 }
 
 /* 1050px */
@@ -333,9 +348,8 @@ nav {
     justify-content: center;
     align-items: center;
   }
-  .servicesCard,
-  .workExperienceCard {
-    margin-top: 15px;
+  .servicesCard {
+    margin-top: 20px;
   }
   .projectsCardContainer,
   .projectsCardContainer-bottom {
@@ -371,16 +385,30 @@ nav {
     text-align: center;
   }
   .aboutMe-content {
-    text-align: justify;
+    text-align: center;
   }
-  .skillsIcon {
-    height: 50px;
-    width: 50px;
+
+  .resumeButtonContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .workExperienceCardContainer {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+  }
+  .workExperienceCard {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .skillsIcon {
+    /* margin-top: 25px; */
+    height: 50px;
+    width: 50px;
   }
 }
 
@@ -400,13 +428,19 @@ nav {
   }
   .skillsIcon {
     margin-top: 25px;
-    height: 75px;
-    width: 75px;
+    height: 50px;
+    width: 50px;
+  }
+  .projectsCardContainer {
+    padding: 0;
+  }
+  .footerText {
+    font-size: 20px;
   }
 }
 
 /* 450px */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 450px) {
   nav {
     display: none;
   }
@@ -420,5 +454,26 @@ nav {
   .footerIcon {
     height: 35px;
     width: 35px;
+  }
+  .skillsIconsContainer {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    align-items: center;
+  }
+  .sectionHeading {
+    font-size: 25px;
+    margin: 25px auto;
+  }
+}
+
+@media only screen and (max-width: 350px) {
+  .skillsIconsContainer {
+    padding-bottom: 50px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    align-items: center;
+  }
+  .footerIcon {
+    margin: 0 8px;
   }
 }
